--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										and market shifts from 2010 to 2025.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/MezD-dev/Ultra-Marathon-Exploratory-Data-Analysis" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/MezD-dev/U.S-Economic-Analysis-Using-FRED" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 
