--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 										<h2><a href="https://github.com/MezD-dev/Ultra-Marathon-Exploratory-Data-Analysis">Ultra Marathon EDA<br /></a></h2>
 									</header>
 									<a href="https://github.com/MezD-dev/Ultra-Marathon-Exploratory-Data-Analysis" class="image fit">
-										<img src="images/econ1.jpg" alt="Ultra Marathon Project Cover" />
+										<img src="images/mara10.jpg" alt="Ultra Marathon Project Cover" />
 									</a>
 									<p>
 										Performed EDA on ultra-marathon race data using Pandas, Matplotlib, and Seaborn to uncover trends in athlete performance,
