--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2><a href="https://github.com/MezD-dev/U.S-Economic-Analysis-Using-FRED">U.S Economic Analysis<br /></a></h2>
 									</header>
 									<a href="https://github.com/MezD-dev/U.S-Economic-Analysis-Using-FRED" class="image fit">
-										<img src="images/econ1.jpg" alt="U.S Economic Analysis Cover" />
+										<img src="images/mara10.jpg" alt="U.S Economic Analysis Cover" />
 									</a>
 									<p>
 										Analyzed U.S. economic data with Python and FRED to visualize labor trends, inflation patterns, 
