--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 						<!-- Featured Post -->
 						<article class="post featured">
 							<header class="major">
-								<h2><a href="#">Tableau Dashboards<br />
+								<h2><a href="https://public.tableau.com/app/profile/mezmure.dawit2832/vizzes" target="_blank">Tableau Dashboards<br />
 								</a></h2>
 								<p>Tableau Dashboards for projects on COVID 19, Netflix, and more.</p>
 							</header>
 						<!--	<a href="#" class="image main"><img src="images/Tableau.png" alt="" /></a> -->
 							<ul class="actions special">
-								<li><a href="https://public.tableau.com/app/profile/mezmure.dawit2832/vizzes" class="button large">VIEW PROJECT</a></li>
+								<li><a href="https://public.tableau.com/app/profile/mezmure.dawit2832/vizzes" class="button large" target="_blank">VIEW PROJECT</a></li>
 							</ul>
 						</article>
 
