--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/mezmure-dawit/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://github.com/MezD-dev" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mezmure-dawit/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/MezD-dev" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
