--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
                 <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/mezmure-dawit/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="https://github.com/MezD-dev" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/mezmure-dawit/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/MezD-dev" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
 
@@ -45,13 +45,13 @@
                     </section>
                     <section>
                         <h3>Email</h3>
-                        <p><a href="mailto:Mezmure221@gmail.com">Mezmure221@gmail.com</a></p>
+                        <p><a href="mailto:Mezmure221@gmail.com" target="_blank">Mezmure221@gmail.com</a></p>
                     </section>
                     <section>
                         <h3>Social</h3>
                         <div class="social-icons">
-                            <a href="https://www.linkedin.com/in/mezmure-dawit/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a>
-                            <a href="https://github.com/MezD-dev" class="icon brands alt fa-github"><span class="label">GitHub</span></a>
+                            <a href="https://www.linkedin.com/in/mezmure-dawit/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a>
+                            <a href="https://github.com/MezD-dev" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a>
                             <br></br>
                         </div>
                     </section>
