--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 					<div id="intro">
 						<h1>Hi, I'm Mezmure<br />
 						</h1>
-						<p> 
-							Below are some of my personal projects and data-driven analyses.</p>
+						<p> Below are some of my personal projects and data-driven analyses.</p>
 							<br><br>
 						<br><br>
 						<ul class="actions">
